ready to 1.6.3: migrate to java21 * use @Serial to serialVersionUID * added explicit default constructors * comment fixes * use try-with-resource for Files.list * use Objects.requireNonNullElse or requireNonNullElseGet * use instanceof T var * added final for some private fields * use String.repeat * use List isEmpty, addFirst, getFirst, addLast, getLast * added @SuppressWarnings("this-escape") for most constructors * use Stream.toList * added use() for returned obj by prefs.lock() : cause an explicit touching to the obj in try-with-resource * use switch expressions * remove overriding methods as same impl. of their super defs * remove some redundant throws * use List.toArray(new T[0]) * use Arrays.fill